# vibe3d

./: .gitignore  BUILD_STATUS.md  CMakeLists.txt  CMakePresets.json  Common.h  FORWARD_PLUS_MODULARIZATION.md  GLB_MODEL_LOADING.md  GraphicsManager.cpp  GraphicsManager.h  InputManager.cpp  InputManager.h  MATERIAL_CONTROLLER_README.md  MONETIZATION_STRATEGY.md  MaterialSystem.cpp  MaterialSystem.h  OBJ_MODEL_LOADING.md  PhysicsManager.cpp  PhysicsManager.h  SCREENSHOT_EXPORT_COMPLETE.md  SETUP.md  SHADOW_BIAS_CONTROLLER_README.md  SHADOW_CONTROL_IMPLEMENTATION.md  SHADOW_DEBUG_COMPLETE.md  SHADOW_DEBUG_FINAL.md  SHADOW_DEBUG_FIX.md  SHADOW_DEBUG_TOGGLE_IMPLEMENTATION.md  SHADOW_SYSTEM_DIAGNOSTIC.md  VULKAN_ARCHITECTURE.md  VULKAN_BRANCH_README.md  compile_shaders.bat  depth_prepass_fragment.glsl  floor_fragment.glsl  floor_vertex.glsl  fps_fragment.glsl  fps_vertex.glsl  fragment.glsl  fullscreen_fragment.glsl  fullscreen_vertex.glsl  imgui.ini  light_culling.comp  (+14 more)
include/glad/: glad.h
release_package/: CONTROLS.txt  README.md  material_config.json
release_package/shaders/: cube.vert.spv  cube_improved.frag.spv  depth.vert.spv  depth_prepass.vert.spv  forward.frag.spv  forward.vert.spv  forward_shading.frag.spv  forward_shading.vert.spv  light_culling.comp.spv  shadow_cascade.vert.spv  tiled_light_culling.comp.spv
shaders/: bloom.frag  bloom.frag.spv  bloom_blur.frag  bloom_blur.frag.spv  bloom_bright.frag  bloom_bright.frag.spv  bloom_composite.frag  bloom_composite.frag.spv  cube.frag  cube.frag.spv  cube.vert  depth.frag  depth.vert  depth_prepass.frag  depth_prepass.vert  forward.frag  forward.vert  forward_shading.frag  forward_shading.vert  fullscreen.vert  light_culling.comp  shadow_cascade.frag  shadow_cascade.vert  tiled_light_culling.comp
src/: glad.c
src/vulkan/: ForwardPlusRenderer.cpp  ForwardPlusRenderer.h  ImGuiManager.cpp  ImGuiManager.h  PostProcessManager.cpp  PostProcessManager.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTypes.h
src/vulkan/modules/: GeometryManager.cpp  GeometryManager.h  PipelineManager.h  RenderPassManager.h  ResourceManager.h  ShadowSystem.h
